# pippi

mbid/: Cargo.toml
mbid/src/: main.rs
media-controller/: Cargo.toml  flake.nix
media-controller/src/: cd.rs  dvd_monitor.rs  hdmi_cec.rs  ir_remote_monitor.rs  main.rs  vlc.rs
media-controller/src/ui/: debug_console.rs  lyrics_app.rs  mod.rs  prompt_window.rs  welcome_window.rs
