[package]
name = "media-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
cec-rs = "12.0.1"
discid = "0.7.0"
femtovg = { version = "0.20.4", features = ["glutin"] }
glutin = "0.32.3"
glutin-winit = "0.5.0"
gpio-cdev = "0.6.0"
libcec-sys = { default-features = false, version = "*" }
mio = "1.1.1"
raw-window-handle = "0.6.2"
udev = { version = "0.9.3", features = ["mio"] }
winit = "0.30.12"
